--- a/index.html
+++ b/index.html
@@ -143,11 +143,203 @@
 				</div>
 			</section>
 
+			<section class="listing">
+				<div class="container">
+					<h2 class="title"> Широкий ассортимент запчастей </h2>
+					<p> по приятным ценам. Дешевле только оптом! </p>
+					<ul class="listing__list">
+						<li class="listing__item">
+							<p class="listing__name"> Насосы </p>
+							<img src="img/" alt="запчасть">
+						</li>
+						<li class="listing__item">
+							<p class="listing__name"> Насосы </p>
+							<img src="img/" alt="запчасть">
+						</li>
+						<li class="listing__item">
+							<p class="listing__name"> Насосы </p>
+							<img src="img/" alt="запчасть">
+						</li>
+						<li class="listing__item">
+							<p class="listing__name"> Насосы </p>
+							<img src="img/" alt="запчасть">
+						</li>
+						<li class="listing__item">
+							<p class="listing__name"> Насосы </p>
+							<img src="img/" alt="запчасть">
+						</li>
+						<li class="listing__item">
+							<p class="listing__name"> Насосы </p>
+							<img src="img/" alt="запчасть">
+						</li>
+						<li class="listing__item">
+							<p class="listing__name"> Насосы </p>
+							<img src="img/" alt="запчасть">
+						</li>
+						<li class="listing__item">
+							<p class="listing__name"> Насосы </p>
+							<img src="img/" alt="запчасть">
+						</li>
+						<li class="listing__item">
+							<p class="listing__name"> Насосы </p>
+							<img src="img/" alt="запчасть">
+						</li>
+						<li class="listing__item">
+							<p class="listing__name"> Насосы </p>
+							<img src="img/" alt="запчасть">
+						</li>
+						<li class="listing__item">
+							<p class="listing__name"> Насосы </p>
+							<img src="img/" alt="запчасть">
+						</li>
+						<li class="listing__item">
+							<p class="listing__name"> Насосы </p>
+							<img src="img/" alt="запчасть">
+						</li>
+					</ul>
+				</div>
+			</section>
 
+			<section class="order">
+				<div class="container">
+					<div class="order__column">
+						<h2 class="title"> Не нашли нужную запчасть? </h2>
+						<p> На сайте представлены только самые популярные запчасти, реальный ассортимент гораздо шире. </p>
+
+						<p> Просто позвоните нам или оставьте заявку через форму справа. Наш сотрудник уточнит наличие и цену и сообщит вам. </p>
+					</div>
+					<div class="order__form">
+						<form id="order" class="form  form--order" method="post" action="/">
+							<div class="form__unit">
+								<input type="text" id="first_name_c" name="name" value="" required="" placeholder=" ">
+								<label for="first_name_c">Имя*</label>
+							</div>
+							<div class="form__unit">
+								<input type="tel" id="phone_c" name="phone" value="" required="" placeholder=" " pattern="^((8|\+3)[\- ]?)?(\(?\d{3}\)?[\- ]?)?[\d\- ]{7,10}$">
+								<label for="phone_c">Телефон*</label>
+								<div class="form__error">
+									Введите пожалуйста реальный телефон.
+								</div>
+							</div>
+							<div class="form__unit">
+								<textarea id="form_text" rows="4" cols="50" name="message" placeholder=" "></textarea>
+								<label for="form_text">Комментарий. Например, название нужной запчасти</label>
+							</div>
+							<div class="form__unit">
+								<input class="form__submit  button" type="submit" value="Уточнить наличие">
+							</div>
+							<div class="form__footer">
+								<p> *обязательное поле </p>
+							</div>
+						</form>
+					</div>
+				</div>
+			</section>
+
+			<section class="special">
+				<div class="container">
+					<div class="special__column">
+						<img src="img/" alt="Стиральная машина">
+					</div>
+					<div class="special__column">
+						<h2 class="title"> Спецпредложение для мастеров! </h2>
+						<p> Для мастеров предусмотрены скидки и бонусы до 20% </p>
+						<p>
+							Звоните по телефону
+							<a class="special__phone" href="tel:89043940099"> 8-904-394-00-99 </a>
+						</p>
+					</div>
+				</div>
+			</section>
+
+			<section class="reasons  container">
+				<h2 class="title"> 6 причин работать с нами </h2>
+				<ul class="reasons__list">
+					<li class="reasons__item"></li>
+					<li class="reasons__item"></li>
+					<li class="reasons__item"></li>
+					<li class="reasons__item"></li>
+					<li class="reasons__item"></li>
+					<li class="reasons__item"></li>
+				</ul>
+			</section>
+
+			<section class="brends">
+				<div class="container">
+					<h2 class="title"> Работаем со всеми марками </h2>
+					<ul class="brends__list">
+						<li class="brends__item"></li>
+						<li class="brends__item"></li>
+						<li class="brends__item"></li>
+						<li class="brends__item"></li>
+						<li class="brends__item"></li>
+						<li class="brends__item"></li>
+						<li class="brends__item"></li>
+						<li class="brends__item"></li>
+						<li class="brends__item"></li>
+						<li class="brends__item"></li>
+						<li class="brends__item"></li>
+						<li class="brends__item"></li>
+						<li class="brends__item"></li>
+						<li class="brends__item"></li>
+						<li class="brends__item"></li>
+						<li class="brends__item"></li>
+						<li class="brends__item"></li>
+						<li class="brends__item"></li>
+					</ul>
+				</div>
+			</section>
+
+			<section class="contacts  container">
+				<div class="contacts__column">
+					<h2 class="title"> Ждем Вас в нашем магазине </h2>
+					<p> Чтобы получить запчасть, приходите в наш магазин. </p>
+					<p> Если вы находитесь в Нижегородской области, и у вас нет возможности приехать в Нижний Новгород, просто позвоните нам, и мы найдем вариант, как доставить товар в ваш город. </p>
+					<ul class="contacts__list">
+						<li class="contacts__item">
+							<i class="contacts__icon  contacts__icon--adress"></i>
+							<p class="contacts__name"> Адрес </p>
+							<p> Нижний Новгород, ул. Нартова, д. 2 второй этаж </p>
+						</li>
+						<li class="contacts__item">
+							<i class="contacts__icon  contacts__icon--work"></i>
+							<p class="contacts__name"> Режим работы </p>
+							<p> Пн-Пт с 9:00 до 19:00
+								<br> Сб с 10:00 до 16:00
+								<br> Воскресенье - выходной </p>
+						</li>
+						<li class="contacts__item">
+							<i class="contacts__icon  contacts__icon--phone"></i>
+							<p class="contacts__name"> Телефон </p>
+							<a class="contacts__link" href="tel:8312869347"> (831)-286-93-47 </a>
+						</li>
+						<li class="contacts__item">
+							<i class="contacts__icon  contacts__icon--mobile"></i>
+							<p class="contacts__name"> Телефон </p>
+							<a class="contacts__link" href="tel:+79043940099"> +7 (904) 394-00-99 </a>
+						</li>
+						<li class="contacts__item">
+							<i class="contacts__icon  contacts__icon--mail"></i>
+							<p class="contacts__name"> E-mail </p>
+							<a class="contacts__link  contacts__link--mail" href="mailto:bytzapchast52@yandex.ru"> bytzapchast52@yandex.ru </a>
+						</li>
+					</ul>
+				</div>
+				<div class="contacts__map"></div>
+			</section>
 		</main>
 
 		<footer class="footer">
-
+			<div class="container">
+				<div class="logo">
+					<a class="logo__link" href="/">
+						<img class="logo__img" src="img/logo.svg" alt="Логотип">
+					</a>
+				</div>
+				<div class="footer__copyright">
+					<p> &#169; Bytzapchast52.ru, 2017. Все права защищены </p>
+				</div>
+			</div>
 		</footer>
 
 	</div>
