--- a/index.html
+++ b/index.html
@@ -27,83 +27,83 @@
 	<div class="page-wrapper">
 
 		<header class="header">
-			<div class="container">
-				<div class="logo">
-					<a class="logo__link" href="/">
-						<img class="logo__img" src="img/logo.svg" alt="Логотип">
-					</a>
-				</div>
-				<nav class="header__nav">
-					<ul class="header__nav-list">
-						<li class="header__nav-item">
-							<a href="#"> Асортимент </a>
-						</li>
-						<li class="header__nav-item">
-							<a href="#"> Мастерам </a>
-						</li>
-						<li class="header__nav-item">
-							<a href="#"> Контакты </a>
-						</li>
-					</ul>
-				</nav>
-				<div class="header__phone">
-					<ul class="header__phone-list">
-						<li class="header__phone-item">
-							<a href="tel:8312869347"> (831) 286-93-47 </a>
-						</li>
-					</ul>
-				</div>
+			<div class="header__inner  container">
+
+				<a class="logo" href="/">
+					<img class="logo__img" src="img/logo.svg" alt="Логотип">
+				</a>
+
+				<ul class="header__nav-list">
+					<li class="header__nav-item">
+						<a href="#"> Ассортимент </a>
+					</li>
+					<li class="header__nav-item">
+						<a href="#"> Мастерам </a>
+					</li>
+					<li class="header__nav-item">
+						<a href="#"> Контакты </a>
+					</li>
+				</ul>
+
+				<ul class="header__phone-list">
+					<li class="header__phone-item">
+						<a href="tel:8312869347"> (831) 286-93-47 </a>
+					</li>
+				</ul>
+
 			</div>
 		</header>
 
 		<main class="main">
 			<section class="page-top">
-				<div class="page-top__promo">
-					<h1 class="pahe-top__title"> Запчасти для стиральных машин <span>в Нижнем Новгороде</span> </h1>
-					<p> Почините свою стиральную машину самостоятельно, не переплачивая за услуги мастеров.
-						<p>
-							<p> Широкий ассортимент запчастей всегда в наличии, звоните! </p>
-							<button id="call" class="button" type="button" name="Уточнить наличие">Уточнить наличие</button>
-				</div>
-				<div class="page-top__cards">
-					<ul class="page-top__list">
-						<li class="page-top__item">
-							<a href="" class="page-top__item-link" href="#/">
-								<div class="page-top__item-img">
-									<img src="img/askoll.jpg" alt="Askoll">
-								</div>
-								<p class="page-top__item-link"> Насос Askoll M224/231XP </p>
-								<p class="page-top__item-price"> Цена <span>590 руб.</span> </p>
-							</a>
-						</li>
-						<li class="page-top__item">
-							<a href="" class="page-top__item-link" href="#/">
-								<div class="page-top__item-img">
-									<img src="img/" alt="Indesit">
-								</div>
-								<p class="page-top__item-link"> ТЭН Indesit, Ariston 1700W </p>
-								<p class="page-top__item-price"> Цена <span>590 руб.</span> </p>
-							</a>
-						</li>
-						<li class="page-top__item">
-							<a href="" class="page-top__item-link" href="#/">
-								<div class="page-top__item-img">
-									<img src="img/" alt="Indesit">
-								</div>
-								<p class="page-top__item-link"> Электроклапан Indesit, Ariston 2Wx90 </p>
-								<p class="page-top__item-price"> Цена <span>590 руб.</span> </p>
-							</a>
-						</li>
-						<li class="page-top__item">
-							<a href="" class="page-top__item-link" href="#/">
-								<div class="page-top__item-img">
-									<img src="img/" alt="Щетки электрические">
-								</div>
-								<p class="page-top__item-link"> Щетки электродвигателя 5x12,5x35 </p>
-								<p class="page-top__item-price"> Цена <span>590 руб.</span> </p>
-							</a>
-						</li>
-					</ul>
+				<div class="container">
+					<div class="page-top__promo">
+						<h1 class="pahe-top__title"> Запчасти для стиральных машин <span>в Нижнем Новгороде</span> </h1>
+						<p> Почините свою стиральную машину самостоятельно, не переплачивая за услуги мастеров.
+							<p>
+								<p> Широкий ассортимент запчастей всегда в наличии, звоните! </p>
+								<button id="call" class="button" type="button" name="Уточнить наличие">Уточнить наличие</button>
+					</div>
+					<div class="page-top__cards">
+						<ul class="page-top__list">
+							<li class="page-top__item">
+								<a href="" class="page-top__item-link" href="#/">
+									<div class="page-top__item-img">
+										<img src="img/askoll.jpg" alt="Askoll">
+									</div>
+									<p class="page-top__item-link"> Насос Askoll M224/231XP </p>
+									<p class="page-top__item-price"> Цена <span>590 руб.</span> </p>
+								</a>
+							</li>
+							<li class="page-top__item">
+								<a href="" class="page-top__item-link" href="#/">
+									<div class="page-top__item-img">
+										<img src="img/" alt="Indesit">
+									</div>
+									<p class="page-top__item-link"> ТЭН Indesit, Ariston 1700W </p>
+									<p class="page-top__item-price"> Цена <span>590 руб.</span> </p>
+								</a>
+							</li>
+							<li class="page-top__item">
+								<a href="" class="page-top__item-link" href="#/">
+									<div class="page-top__item-img">
+										<img src="img/" alt="Indesit">
+									</div>
+									<p class="page-top__item-link"> Электроклапан Indesit, Ariston 2Wx90 </p>
+									<p class="page-top__item-price"> Цена <span>590 руб.</span> </p>
+								</a>
+							</li>
+							<li class="page-top__item">
+								<a href="" class="page-top__item-link" href="#/">
+									<div class="page-top__item-img">
+										<img src="img/" alt="Щетки электрические">
+									</div>
+									<p class="page-top__item-link"> Щетки электродвигателя 5x12,5x35 </p>
+									<p class="page-top__item-price"> Цена <span>590 руб.</span> </p>
+								</a>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</section>
 
@@ -203,7 +203,7 @@
 			<section class="order">
 				<div class="container">
 					<div class="order__column">
-						<h2 class="title"> Не нашли нужную запчасть? </h2>
+						<h2 class="title  title--white"> Не нашли нужную запчасть? </h2>
 						<p> На сайте представлены только самые популярные запчасти, реальный ассортимент гораздо шире. </p>
 
 						<p> Просто позвоните нам или оставьте заявку через форму справа. Наш сотрудник уточнит наличие и цену и сообщит вам. </p>
@@ -242,7 +242,7 @@
 						<img src="img/" alt="Стиральная машина">
 					</div>
 					<div class="special__column">
-						<h2 class="title"> Спецпредложение для мастеров! </h2>
+						<h2 class="title  title--white"> Спецпредложение для мастеров! </h2>
 						<p> Для мастеров предусмотрены скидки и бонусы до 20% </p>
 						<p>
 							Звоните по телефону
