--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
 
 				<ul class="header__phone-list">
 					<li class="header__phone-item">
-						<a href="tel:8312869347"> (831) 286-93-47 </a>
+						<a href="#/" id="call2"> +7 (837) 283-57-91 </a>
+						<p> Позвоните мне </p>
+					</li>
+					<li class="header__phone-item  header__phone-item--mobile">
+						<a href="tel:+78372835791"> +7 (837) 283-57-91 </a>
 					</li>
 				</ul>
 
@@ -61,14 +65,18 @@
 					<div class="page-top__promo">
 						<h1 class="page-top__title"> Запчасти для стиральных машин </h1>
 						<span class="page-top__subtitle"> в Нижнем Новгороде </span>
-						<p> Почините свою стиральную машину самостоятельно, не переплачивая за услуги мастеров. </p>
-						<p> Широкий ассортимент запчастей всегда в наличии, звоните! </p>
+						<p> Почините свою стиральную машину
+							<br> самостоятельно, не переплачивая
+							<br> за услуги мастеров.
+						  <br><br> Широкий ассортимент запчастей
+							<br> всегда в наличии, звоните!
+						</p>
 						<button id="call" class="button" type="button" name="Уточнить наличие">Уточнить наличие</button>
 					</div>
 
 					<ul class="page-top__list">
 						<li class="page-top__item">
-							<a href="" class="page-top__item-link" href="#/">
+							<a class="page-top__item-link" href="#/">
 								<div class="page-top__item-img">
 									<img src="img/askoll.jpg" alt="Askoll">
 								</div>
@@ -79,7 +87,7 @@
 							</a>
 						</li>
 						<li class="page-top__item">
-							<a href="" class="page-top__item-link" href="#/">
+							<a class="page-top__item-link" href="#/">
 								<div class="page-top__item-img">
 									<img src="img/ten.jpg" alt="Indesit">
 								</div>
@@ -90,7 +98,7 @@
 							</a>
 						</li>
 						<li class="page-top__item">
-							<a href="" class="page-top__item-link" href="#/">
+							<a class="page-top__item-link" href="#/">
 								<div class="page-top__item-img">
 									<img src="img/klapan.jpg" alt="Indesit">
 								</div>
@@ -101,7 +109,7 @@
 							</a>
 						</li>
 						<li class="page-top__item">
-							<a href="" class="page-top__item-link" href="#/">
+							<a class="page-top__item-link" href="#/">
 								<div class="page-top__item-img">
 									<img src="img/sh.jpg" alt="Щетки электрические">
 								</div>
@@ -119,7 +127,8 @@
 			<section class="points">
 				<div class="container">
 					<h2 class="title"> Сделать самому или вызвать мастера? </h2>
-					<p class="points__promo"> Если вы спокойно можете заменить выключатель в комнате, то и замена деталей от стиральной машины — вполне решаемая задача для вас
+					<p class="points__promo"> Если вы спокойно можете заменить выключатель в комнате,
+						<br> то и замена деталей от стиральной машины — вполне решаемая задача для вас
 					</p>
 				</div>
 				<ul class="points__list">
@@ -163,53 +172,53 @@
 						</li>
 						<li class="listing__item">
 							<p class="listing__name"> ТЭНы </p>
-							<img src="img/" alt="запчасть">
+							<img src="img/ten-s.jpg" alt="запчасть">
 						</li>
 						<li class="listing__item">
 							<p class="listing__name"> Подшипники </p>
-							<img src="img/" alt="запчасть">
+							<img src="img/pod.jpg" alt="запчасть">
 						</li>
 						<li class="listing__item">
 							<p class="listing__name"> Сальники </p>
-							<img src="img/" alt="запчасть">
+							<img src="img/sal.jpg" alt="запчасть">
 						</li>
 						<li class="listing__item">
 							<p class="listing__name"> Клапаны </p>
-							<img src="img/" alt="запчасть">
+							<img src="img/klap.jpg" alt="запчасть">
 						</li>
 						<li class="listing__item">
 							<p class="listing__name"> Блокировки люка </p>
-							<img src="img/" alt="запчасть">
+							<img src="img/block.jpg" alt="запчасть">
 						</li>
 						<li class="listing__item">
 							<p class="listing__name"> Прессостаты </p>
-							<img src="img/" alt="запчасть">
+							<img src="img/preo.jpg" alt="запчасть">
 						</li>
 						<li class="listing__item">
 							<p class="listing__name"> Амортизаторы </p>
-							<img src="img/" alt="запчасть">
+							<img src="img/amort.jpg" alt="запчасть">
 						</li>
 						<li class="listing__item">
 							<p class="listing__name"> Ремни </p>
-							<img src="img/" alt="запчасть">
+							<img src="img/rem.jpg" alt="запчасть">
 						</li>
 						<li class="listing__item">
 							<p class="listing__name"> Манжеты </p>
-							<img src="img/" alt="запчасть">
+							<img src="img/manzh.jpg" alt="запчасть">
 						</li>
 						<li class="listing__item">
 							<p class="listing__name"> Патрубки </p>
-							<img src="img/" alt="запчасть">
+							<img src="img/patr.jpg" alt="запчасть">
 						</li>
 						<li class="listing__item">
 							<p class="listing__name"> Аксессуары </p>
-							<img src="img/" alt="запчасть">
+							<img src="img/acses.jpg" alt="запчасть">
 						</li>
 					</ul>
 				</div>
 			</section>
 
-			<section class="order" id="master">
+			<section class="order">
 				<div class="container">
 					<div class="order__column">
 						<h2 class="title  title--white"> Не нашли нужную запчасть? </h2>
@@ -221,19 +230,18 @@
 						<h2 class="order__subtitle"> Заказ запчасти </h2>
 						<form id="order" class="form  form--order" method="post" action="/">
 							<div class="form__unit">
-								<input type="text" id="first_name_c" name="name" value="" required="" placeholder=" ">
+								<input type="text" id="first_name_c" name="name" value="" required="" placeholder="Имя*" minlength="3">
 								<label for="first_name_c">Имя*</label>
 							</div>
 							<div class="form__unit">
-								<input type="tel" id="phone_c" name="phone" value="" required="" placeholder=" " pattern="^((8|\+3)[\- ]?)?(\(?\d{3}\)?[\- ]?)?[\d\- ]{7,10}$">
+								<input type="tel" id="phone_c" name="phone" value="" required="" placeholder="Телефон*" pattern="^\(?[0-9]{3}\)?(\s+)?[0-9]{3}-?[0-9]{2}-?[0-9]{2}$">
 								<label for="phone_c">Телефон*</label>
 								<div class="form__error">
-									Введите корректный номер телефона.
+									Введите пожалуйста полный номер телефона. В формате (xxx)-xxx-xx-xx
 								</div>
 							</div>
 							<div class="form__unit">
-								<textarea id="form_text" rows="4" cols="50" name="message" placeholder=" "></textarea>
-								<label for="form_text">Комментарий. Например, название нужной запчасти</label>
+								<textarea id="form_text" rows="4" cols="50" name="message" placeholder="Комментарий. Например, название нужной запчасти"></textarea>
 							</div>
 							<div class="form__unit">
 								<input class="form__submit  button" type="submit" value="Уточнить наличие">
@@ -246,7 +254,7 @@
 				</div>
 			</section>
 
-			<section class="special">
+			<section class="special" id="master">
 				<div class="container">
 					<div class="special__column">
 						<img src="img/special.jpg" alt="Стиральная машина">
@@ -315,58 +323,58 @@
 					<h2 class="title"> Работаем со всеми марками </h2>
 					<ul class="brends__list">
 						<li class="brends__item">
-							<img src="img/samsung.png" alt="Брэнд">
+							<img src="img/brends/samsung.png" alt="Брэнд">
 						</li>
 						<li class="brends__item">
-							<img src="img/samsung.png" alt="Брэнд">
+							<img src="img/brends/lg.png" alt="Брэнд">
 						</li>
 						<li class="brends__item">
-							<img src="img/samsung.png" alt="Брэнд">
+							<img src="img/brends/indesit.png" alt="Брэнд">
 						</li>
 						<li class="brends__item">
-							<img src="img/samsung.png" alt="Брэнд">
+							<img src="img/brends/ariston.png" alt="Брэнд">
 						</li>
 						<li class="brends__item">
-							<img src="img/samsung.png" alt="Брэнд">
+							<img src="img/brends/bosch.png" alt="Брэнд">
 						</li>
 						<li class="brends__item">
-							<img src="img/samsung.png" alt="Брэнд">
+							<img src="img/brends/beko.png" alt="Брэнд">
 						</li>
 						<li class="brends__item">
-							<img src="img/samsung.png" alt="Брэнд">
+							<img src="img/brends/electrolux.png" alt="Брэнд">
 						</li>
 						<li class="brends__item">
-							<img src="img/samsung.png" alt="Брэнд">
+							<img src="img/brends/hansa.png" alt="Брэнд">
 						</li>
 						<li class="brends__item">
-							<img src="img/samsung.png" alt="Брэнд">
+							<img src="img/brends/candy.png" alt="Брэнд">
 						</li>
 						<li class="brends__item">
-							<img src="img/samsung.png" alt="Брэнд">
+							<img src="img/brends/zanussi.png" alt="Брэнд">
 						</li>
 						<li class="brends__item">
-							<img src="img/samsung.png" alt="Брэнд">
+							<img src="img/brends/ardo.png" alt="Брэнд">
 						</li>
 						<li class="brends__item">
-							<img src="img/samsung.png" alt="Брэнд">
+							<img src="img/brends/whirpool.png" alt="Брэнд">
 						</li>
 						<li class="brends__item">
-							<img src="img/samsung.png" alt="Брэнд">
+							<img src="img/brends/gorenje.png" alt="Брэнд">
 						</li>
 						<li class="brends__item">
-							<img src="img/samsung.png" alt="Брэнд">
+							<img src="img/brends/atlant.png" alt="Брэнд">
 						</li>
 						<li class="brends__item">
-							<img src="img/samsung.png" alt="Брэнд">
+							<img src="img/brends/daewoo.png" alt="Брэнд">
 						</li>
 						<li class="brends__item">
-							<img src="img/samsung.png" alt="Брэнд">
+							<img src="img/brends/siemens.png" alt="Брэнд">
 						</li>
 						<li class="brends__item">
-							<img src="img/samsung.png" alt="Брэнд">
+							<img src="img/brends/vestel.png" alt="Брэнд">
 						</li>
 						<li class="brends__item">
-							<img src="img/samsung.png" alt="Брэнд">
+							<img src="img/brends/miele.png" alt="Брэнд">
 						</li>
 					</ul>
 				</div>
@@ -378,7 +386,7 @@
 					<div class="contacts__content">
 						<h2 class="title"> Ждем Вас в нашем магазине </h2>
 						<p> Чтобы получить запчасть, приходите в наш магазин. </p>
-						<p> Если вы находитесь в Нижегородской области, и у вас нет возможности приехать в Нижний Новгород, просто позвоните нам, и мы найдем вариант, как доставить товар в ваш город. </p>
+						<p> Если вы находитесь в Нижегородской области, и у вас нет возможности приехать <br> в Нижний Новгород, просто позвоните нам, и мы найдем вариант, <br> как доставить товар в ваш город. </p>
 
 						<ul class="contacts__list">
 							<li class="contacts__column">
@@ -388,7 +396,7 @@
 									<p> Нижний Новгород, ул. Нартова, д. 2 второй этаж </p>
 								</div>
 								<div class="contacts__item">
-									<i class="contacts__icon  contacts__icon--work"></i>
+									<i class="contacts__icon  contacts__icon--time"></i>
 									<p class="contacts__name"> Режим работы </p>
 									<p> Пн-Пт с 9:00 до 19:00
 										<br> Сб с 10:00 до 16:00
@@ -399,12 +407,12 @@
 								<div class="contacts__item">
 									<i class="contacts__icon  contacts__icon--phone"></i>
 									<p class="contacts__name"> Телефон </p>
-									<a class="contacts__link" href="tel:8312869347"> (831)-286-93-47 </a>
+									<a class="contacts__link" href="#/"> +7 (831) 286-93-47 </a>
 								</div>
 								<div class="contacts__item">
 									<i class="contacts__icon  contacts__icon--mobile"></i>
 									<p class="contacts__name"> Телефон </p>
-									<a class="contacts__link" href="tel:+79043940099"> +7 (904) 394-00-99 </a>
+									<a class="contacts__link" href="#/"> +7 (837) 283-57-91 </a>
 								</div>
 								<div class="contacts__item">
 									<i class="contacts__icon  contacts__icon--mail"></i>
@@ -431,7 +439,7 @@
 					</a>
 				</div>
 				<div class="footer__copyright">
-					<p> &#169; Bytzapchast52.ru, 2017. Все права защищены </p>
+					<p> &#169; Bytzapchast52.ru, 2017. <span>Все права защищены</span> </p>
 				</div>
 			</div>
 		</footer>
@@ -450,22 +458,45 @@
 			<h2 class="order__subtitle"> Заказ запчасти </h2>
 			<form id="order_modal" class="form  form--order" method="post" action="/">
 				<div class="form__unit">
-					<input type="text" id="first_name" name="name" value="" required="" placeholder=" ">
+					<input type="text" id="first_name" name="name" value="" required="" placeholder="Имя*" minlength="3">
 					<label for="first_name">Имя*</label>
 				</div>
 				<div class="form__unit">
-					<input type="tel" id="phone" name="phone" value="" required="" placeholder=" " pattern="^((8|\+3)[\- ]?)?(\(?\d{3}\)?[\- ]?)?[\d\- ]{7,10}$">
+					<input type="tel" id="phone" name="phone" value="" required="" placeholder="Телефон*" pattern="^\(?[0-9]{3}\)?(\s+)?[0-9]{3}-?[0-9]{2}-?[0-9]{2}$">
 					<label for="phone">Телефон*</label>
 					<div class="form__error">
-						Введите корректный номер телефона.
+						Введите пожалуйста полный номер телефона. В формате (xxx)-xxx-xx-xx
 					</div>
 				</div>
 				<div class="form__unit">
-					<textarea id="text" rows="4" cols="50" name="message" placeholder=" "></textarea>
-					<label for="text">Комментарий. Например, название нужной запчасти</label>
+					<textarea id="text" rows="4" cols="50" name="message" placeholder="Комментарий. Например, название нужной запчасти"></textarea>
 				</div>
 				<div class="form__unit">
 					<input class="form__submit  button" type="submit" value="Уточнить наличие">
+				</div>
+			</form>
+		</div>
+	</div>
+
+	<div id="modal_call2" class="modal  modal--call  form-wrapper">
+		<button class="modal__close"> Close </button>
+		<div class="modal__guts">
+			<h2 class="order__subtitle"> Заказать звонок </h2>
+			<p> Заполните пожалуйста форму и с Вами свяжется наш специалист </p>
+			<form id="order_modal2" class="form  form--order" method="post" action="/">
+				<div class="form__unit">
+					<input type="text" id="first_name2" name="name" value="" required="" placeholder="Имя*" minlength="3">
+					<label for="first_name2">Имя*</label>
+				</div>
+				<div class="form__unit">
+					<input type="tel" id="phone2" name="phone" value="" required="" placeholder="Телефон*" pattern="^\(?[0-9]{3}\)?(\s+)?[0-9]{3}-?[0-9]{2}-?[0-9]{2}$">
+					<label for="phone2">Телефон*</label>
+					<div class="form__error">
+						Введите пожалуйста полный номер телефона. В формате (xxx)-xxx-xx-xx
+					</div>
+				</div>
+				<div class="form__unit">
+					<input class="form__submit  button" type="submit" value="Отправить">
 				</div>
 			</form>
 		</div>
